添加更多文件类型的缓存

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 # 设置Expires头
 <IfModule mod_expires.c>
-	<FilesMatch "\.(html)$">
+	<FilesMatch "\.(html|css|md|pub|txt)$">
 		ExpiresActive On
 		ExpiresDefault "access plus 4 hours"
 	</FilesMatch>
