仅HTTPS响应设置HSTS

--- a/.htaccess
+++ b/.htaccess
@@ -12,10 +12,11 @@
 	</FilesMatch>
 </IfModule>
 
-# 设置CORS头部以允许跨域调用
 <IfModule mod_headers.c>
-	Header set Strict-Transport-Security "max-age=31536000"
+	# 设置 HSTS
+	Header always set Strict-Transport-Security "max-age=31536000" env=HTTPS
 	<FilesMatch "^(tracking\.js|dark\.css|id_rsa\.pub)$">
+		# 设置CORS头部以允许跨域调用
 		Header set Access-Control-Allow-Origin "*"
 		Header set Access-Control-Allow-Methods "GET, OPTIONS"
 		Header set Access-Control-Allow-Headers "Content-Type"
